--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -6,7 +6,6 @@
   <string name="input_email">Ingrese su correo electrónico</string>
 
   <string name="picture_logo">Este logotipo de StoryApp</string>
-  <string name="welcome">"Bienvenido !"</string>
 
   <string name="invalid_username">No es un nombre de usuario válido</string>
   <string name="invalid_email">No es un correo electrónico válido</string>
@@ -64,5 +63,9 @@
   <string name="capture_image">Capturar imagen</string>
   <string name="must_filled">Debe ser llenado</string>
   <string name="retry">Rever</string>
+  <string name="title_activity_maps">MapsActivity</string>
+  <string name="no_data">Sin datos</string>
+  <string name="invalid_capture">Error al tomar fotos</string>
+  <string name="failed_open_camera">Archivado para abrir la cámara</string>
 
 </resources>
