--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -6,7 +6,6 @@
   <string name="input_email">Masukkan email Anda</string>
 
   <string name="picture_logo">Logo aplikasi ini</string>
-  <string name="welcome">"Selamat datang !"</string>
 
   <string name="invalid_username">Bukan nama pengguna yang valid</string>
   <string name="invalid_email">Bukan email yang valid</string>
@@ -64,5 +63,9 @@
   <string name="capture_image">Ambil gambar</string>
   <string name="must_filled">Kolom harus diisi</string>
   <string name="retry">Coba Lagi</string>
+  <string name="title_activity_maps">MapsActivity</string>
+  <string name="no_data">Tidak ada data</string>
+  <string name="invalid_capture">Gagal mengambil gambar</string>
+  <string name="failed_open_camera">Gagal membuka kamera</string>
 
 </resources>
